# AgenTools

./: .gitignore  CLAUDE.md  README.md  SPEC.md  index.html  registry.yaml
tools/writing/voice-cloner/: README.md  analysis-spec.md  analyzer.py  cli.py  excerpts.py  generator.py  llm.py  manifest.yaml  metrics.py  pyproject.toml  reader.py  requirements.txt  synthesizer.py  validator.py  vocabulary.py
tools/writing/voice-cloner/data/: abbreviations.txt
tools/writing/voice-cloner/eval/: qc.py  run_eval.py  scoring.py  stylometrics.py
tools/writing/voice-cloner/eval/darwin/samples/: sample-1.txt  sample-2.txt  sample-3.txt  sample-4.txt  sample-5.txt
tools/writing/voice-cloner/eval/didion/samples/: sample-1.txt  sample-2.txt  sample-3.txt  sample-4.txt  sample-5.txt
tools/writing/voice-cloner/eval/experiments/skill-format/: pg-target-metrics.json  results.md
tools/writing/voice-cloner/eval/hemingway/samples/: sample-1.txt  sample-2.txt  sample-3.txt  sample-4.txt  sample-5.txt  sample-6.txt  sample-7.txt
tools/writing/voice-cloner/eval/orwell/samples/: sample-1.txt  sample-2.txt  sample-3.txt  sample-4.txt  sample-5.txt
tools/writing/voice-cloner/eval/output/: eval-summary.txt
tools/writing/voice-cloner/eval/output/darwin-voice/: SKILL.md  analysis-report.md  eval-report.txt  eval-results.json  topics.json
tools/writing/voice-cloner/eval/output/hemingway-voice/: SKILL.md  analysis-report.md  eval-report.txt  eval-results.json  topics.json
tools/writing/voice-cloner/tests/: test_analyzer.py  test_generator.py  test_reader.py  test_synthesizer.py
(+306 files in other folders)
